// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoInput renders default state with correct label, without any value and with correct placeholder in input and submit button disabled 1`] = `
<DocumentFragment>
  <div
    class="flex gap-2 items-end"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="ml-1"
      >
        <label
          class="font-semibold text-xl text-primary-dark cursor-pointer select-none"
          data-testid="todo-input-label"
          for="todo-input"
        >
          Todo Title
        </label>
      </div>
      <input
        class="w-60 rounded-lg border font-medium border-primary-dark focus:outline-none focus:border-accent text-base p-2 placeholder-primary-dark-disabled text-primary-dark"
        data-testid="todo-input"
        id="todo-input"
        placeholder="Enter a Todo title..."
        value=""
      />
    </div>
    <button
      class="inline font-medium p-2 rounded-lg text-white bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent"
      data-testid="todo-input-button"
      disabled=""
      type="button"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;

exports[`TodoInput renders input field that can be type into resulting in enabled submit button 1`] = `
<DocumentFragment>
  <div
    class="flex gap-2 items-end"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="ml-1"
      >
        <label
          class="font-semibold text-xl text-primary-dark cursor-pointer select-none"
          data-testid="todo-input-label"
          for="todo-input"
        >
          Todo Title
        </label>
      </div>
      <input
        class="w-60 rounded-lg border font-medium border-primary-dark focus:outline-none focus:border-accent text-base p-2 placeholder-primary-dark-disabled text-primary-dark"
        data-testid="todo-input"
        id="todo-input"
        placeholder="Enter a Todo title..."
        value="test todo"
      />
    </div>
    <button
      class="inline font-medium p-2 rounded-lg text-white bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent"
      data-testid="todo-input-button"
      type="button"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;
